--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
 
-- name: Create foobar file
-  file: path="/tmp/{{file_name}}" state=touch owner=vagrant group=vagrant
+- include: prerequisite.yml
+
+- include: validate.yml
+
+- include: install.yml
+
+- include: configure.yml
+
+- include: service.yml
